--- a/app/src/main/res/layout/fragment_nutrition.xml
+++ b/app/src/main/res/layout/fragment_nutrition.xml
@@ -4,20 +4,313 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/aqua"
     tools:context=".ui.nutrition.NutritionFragment">
 
-    
-    <TextView
-        android:id="@+id/text_nutrition"
+    <ScrollView
+
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="8dp"
-        android:textAlignment="center"
-        android:textSize="20sp"
+        android:layout_height="match_parent"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        >
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
+
+
+            <TextView
+                android:id="@+id/textView"
+                android:layout_width="145dp"
+                android:layout_height="33dp"
+                android:text="NUTRIÇÃO"
+                android:textColor="@color/white"
+                android:textSize="20dp"
+                android:textStyle="bold"
+                android:layout_marginLeft="20dp"/>
+
+
+            <androidx.cardview.widget.CardView
+                android:id="@+id/cardViewCalendar"
+                android:layout_width="350dp"
+                android:layout_height="200dp"
+                android:layout_marginLeft="30dp"
+                app:cardCornerRadius="30dp">
+
+                <CalendarView
+                    android:layout_width="wrap_content"
+                    android:layout_height="150dp"
+                    android:layout_marginTop="50dp" />
+
+                <Spinner
+                    android:id="@+id/spinnerDia"
+                    android:layout_width="100dp"
+                    android:layout_height="30dp"
+                    android:layout_marginLeft="20dp"
+                    android:layout_marginTop="10dp"
+
+                    />
+
+            </androidx.cardview.widget.CardView>
+
+            <TextView
+                android:id="@+id/text_nutrition"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="8dp"
+                android:layout_marginEnd="8dp"
+                android:textAlignment="center"
+                android:textSize="20sp"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="@id/cardViewCalendar"
+                app:layout_constraintTop_toTopOf="parent" />
+
+            <TextView
+                android:id="@+id/textResumo"
+                android:layout_width="100dp"
+                android:layout_height="30dp"
+                android:text="RESUMO"
+                android:textColor="@color/white"
+                android:layout_marginLeft="20dp"
+                />
+
+            <androidx.cardview.widget.CardView
+                android:id="@+id/cardViewResumo"
+                android:layout_width="362dp"
+                android:layout_height="164dp"
+                app:cardCornerRadius="30dp"
+                android:layout_marginLeft="30dp"
+                android:layout_marginTop="20dp"
+                >
+
+                <TextView
+                    android:layout_width="100dp"
+                    android:layout_height="30dp"
+                    android:layout_marginLeft="120dp"
+                    android:layout_marginTop="10dp"
+                    android:text="Calorias"
+                    android:textAlignment="center"
+                    android:textSize="16dp"
+                    android:textStyle="bold" />
+
+
+                <TextView
+                    android:id="@+id/textConsumida"
+                    android:layout_width="100dp"
+                    android:layout_height="30dp"
+                    android:layout_marginLeft="10dp"
+                    android:layout_marginTop="50dp"
+                    android:text="Consumidas"
+                    android:textAlignment="center"
+                    android:textSize="12dp" />
+
+                <TextView
+                    android:layout_width="100dp"
+                    android:layout_height="30dp"
+                    android:layout_marginLeft="10dp"
+                    android:layout_marginTop="80dp"
+                    android:text="1006 Kcal"
+                    android:textAlignment="center"
+                    android:textColor="@color/green"
+                    android:textSize="12dp" />
+
+                <TextView
+                    android:id="@+id/textCaloExer"
+                    android:layout_width="100dp"
+                    android:layout_height="30dp"
+                    android:layout_marginLeft="250dp"
+                    android:layout_marginTop="50dp"
+                    android:text="Exercícios"
+                    android:textAlignment="center"
+                    android:textSize="12dp" />
+
+                <TextView
+                    android:layout_width="100dp"
+                    android:layout_height="30dp"
+                    android:layout_marginLeft="250dp"
+                    android:layout_marginTop="80dp"
+                    android:text="0 Kcal"
+                    android:textAlignment="center"
+                    android:textColor="@color/red"
+                    android:textSize="12dp" />
+
+                <TextView
+                    android:id="@+id/textConsumir"
+                    android:layout_width="100dp"
+                    android:layout_height="30dp"
+                    android:layout_marginLeft="120dp"
+                    android:layout_marginTop="60dp"
+                    android:text="Consumir"
+                    android:textAlignment="center"
+                    android:textSize="12dp" />
+
+                <TextView
+                    android:layout_width="100dp"
+                    android:layout_height="30dp"
+                    android:layout_marginLeft="120dp"
+                    android:layout_marginTop="90dp"
+                    android:text="1600 Kcal"
+                    android:textAlignment="center"
+                    android:textSize="12dp"
+                    android:textStyle="bold" />
+
+
+            </androidx.cardview.widget.CardView>
+
+            <TextView
+                android:id="@+id/textRefeicoes"
+                android:layout_width="100dp"
+                android:layout_height="30dp"
+                android:text="REFEIÇÕES"
+                android:textColor="@color/white"
+                android:layout_marginTop="30dp"
+                android:layout_marginLeft="20dp"
+                />
+
+            <androidx.cardview.widget.CardView
+                android:id="@+id/cardViewCafeDaManha"
+                android:layout_width="362dp"
+                android:layout_height="114dp"
+                app:cardCornerRadius="30dp"
+                android:layout_marginLeft="30dp"
+                android:layout_marginTop="30dp">
+
+                <ImageView
+                    android:layout_width="24dp"
+                    android:layout_height="24dp"
+                    android:layout_marginLeft="15dp"
+                    android:layout_marginTop="15dp"
+                    android:background="@drawable/stopwatch_icon" />
+
+                <TextView
+                    android:layout_width="50dp"
+                    android:layout_height="25dp"
+                    android:layout_marginLeft="45dp"
+                    android:layout_marginTop="8dp"
+                    android:text="Horário"
+                    android:textStyle="bold" />
+
+                <TextView
+                    android:layout_width="50dp"
+                    android:layout_height="25dp"
+                    android:layout_marginLeft="45dp"
+                    android:layout_marginTop="20dp"
+                    android:text="08:00"
+                    android:textAlignment="center"
+                    android:textStyle="bold" />
+
+                <TextView
+                    android:layout_width="100dp"
+                    android:layout_height="25dp"
+                    android:layout_marginLeft="120dp"
+                    android:layout_marginTop="15dp"
+                    android:text="Café da Manhã"
+                    android:textStyle="bold" />
+
+                <ImageButton
+                    android:id="@+id/buttonEditCafeManha"
+                    android:layout_width="35dp"
+                    android:layout_height="35dp"
+                    android:layout_marginLeft="300dp"
+                    android:layout_marginTop="7dp"
+                    android:background="@drawable/add_square_icon2"
+                    />
+
+                <TextView
+                    android:layout_width="80dp"
+                    android:layout_height="25dp"
+                    android:layout_marginLeft="5dp"
+                    android:layout_marginTop="60dp"
+                    android:text="Carboidratos"
+                    android:textStyle="bold" />
+
+                <TextView
+                    android:id="@+id/textCarboidratos"
+                    android:layout_width="80dp"
+                    android:layout_height="25dp"
+                    android:layout_marginLeft="5dp"
+                    android:layout_marginTop="75dp"
+                    android:text="12g"
+                    android:textAlignment="center"
+                    android:textStyle="bold" />
+
+                <TextView
+                    android:layout_width="80dp"
+                    android:layout_height="25dp"
+                    android:layout_marginLeft="95dp"
+                    android:layout_marginTop="60dp"
+                    android:text="Proteinas"
+                    android:textAlignment="center"
+                    android:textStyle="bold" />
+
+                <TextView
+                    android:id="@+id/textProteinas"
+                    android:layout_width="80dp"
+                    android:layout_height="25dp"
+                    android:layout_marginLeft="95dp"
+                    android:layout_marginTop="75dp"
+                    android:text="13g"
+                    android:textAlignment="center"
+                    android:textStyle="bold" />
+
+                <TextView
+                    android:layout_width="80dp"
+                    android:layout_height="25dp"
+                    android:layout_marginLeft="185dp"
+                    android:layout_marginTop="60dp"
+                    android:text="Gorduras"
+                    android:textAlignment="center"
+                    android:textStyle="bold" />
+
+                <TextView
+                    android:id="@+id/textGorduras"
+                    android:layout_width="80dp"
+                    android:layout_height="25dp"
+                    android:layout_marginLeft="185dp"
+                    android:layout_marginTop="75dp"
+                    android:text="12g"
+                    android:textAlignment="center"
+                    android:textStyle="bold" />
+
+                <ImageView
+                    android:layout_width="40dp"
+                    android:layout_height="40dp"
+                    android:layout_marginLeft="250dp"
+                    android:layout_marginTop="60dp"
+                    android:background="@drawable/burn_fire_icon"/>
+
+                <TextView
+                    android:layout_width="80dp"
+                    android:layout_height="25dp"
+                    android:layout_marginLeft="280dp"
+                    android:layout_marginTop="60dp"
+                    android:text="Calorias"
+                    android:textAlignment="center"
+                    android:textStyle="bold" />
+
+                <TextView
+                    android:id="@+id/textCalorias"
+                    android:layout_width="80dp"
+                    android:layout_height="25dp"
+                    android:layout_marginLeft="280dp"
+                    android:layout_marginTop="75dp"
+                    android:text="206 Kcal"
+                    android:textAlignment="center"
+                    android:textStyle="bold" />
+
+
+
+
+
+
+            </androidx.cardview.widget.CardView>
+
+        </LinearLayout>
+    </ScrollView>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
