--- a/app/src/main/res/layout/fragment_init.xml
+++ b/app/src/main/res/layout/fragment_init.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/aqua"
-    tools:context=".ui.init.InitFragment">
+    tools:context=".features.init.InitFragment">
 
     <TextView
         android:id="@+id/text_init"
