--- a/app/src/main/res/layout/fragment_login_email.xml
+++ b/app/src/main/res/layout/fragment_login_email.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:fillViewport="true"
     android:background="@drawable/telafundo2"
-    tools:context=".ui.login.LoginEmailFragment">
+    tools:context=".features.login.LoginEmailFragment">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
