--- a/app/src/main/res/layout/fragment_workout.xml
+++ b/app/src/main/res/layout/fragment_workout.xml
@@ -9,7 +9,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@color/aqua"
-        tools:context=".ui.workout.WorkoutFragment">
+        tools:context=".features.workout.WorkoutFragment">
 
         <TextView
             android:id="@+id/tvWorkout"
