--- a/app/src/main/res/layout/exer2_fragment.xml
+++ b/app/src/main/res/layout/exer2_fragment.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".ui.exercises.ExercisesFragment"
-    android:background="@color/aqua">
+    android:background="@color/primary_background">
 
     <TextView
         android:layout_width="127dp"
