--- a/app/src/main/res/layout/fragment_bottom_sheet_filter.xml
+++ b/app/src/main/res/layout/fragment_bottom_sheet_filter.xml
@@ -1,123 +1,86 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:fillViewport="true"
+    android:background="@color/secondary_background"
     tools:context=".ui.exercises.BottomSheetFilterFragment">
 
+    <androidx.appcompat.widget.AppCompatTextView
+        android:id="@+id/tvFilter"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:text="@string/bsFilterTitle"
+        android:textSize="@dimen/secondary_title_default"
+        android:textStyle="bold"
+        android:textColor="@color/light_grey"
+        android:layout_marginTop="@dimen/vertical_margin_default"
+        android:layout_marginStart="@dimen/horizontal_margin_default"
+        android:layout_marginBottom="@dimen/vertical_margin_between_contents"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintBottom_toTopOf="@id/rgFilter"/>
 
-        <LinearLayout
+
+    <RadioGroup
+        android:id="@+id/rgFilter"
+        android:checkedButton="@+id/rbFilter3"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layoutDirection="rtl"
+        android:layout_margin="@dimen/margin_default"
+        app:layout_constraintTop_toBottomOf="@id/tvFilter"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintBottom_toTopOf="@id/btFilter">
+
+
+        <RadioButton
+            android:id="@+id/rbFilter1"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_gravity="center_horizontal"
-            android:orientation="vertical">
+            android:textColor="@color/light_grey"
+            android:buttonTint="@drawable/radio_button"
+            android:drawablePadding="@dimen/icon_padding"
+            android:drawableEnd="@drawable/ic_baseline_star"
+            android:text="@string/favorites"/>
 
-            <TextView
-                android:id="@+id/tvHello"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_margin="@dimen/margin_default"
-                android:text="@string/hello_blank_fragment"
-                android:textAlignment="center" />
+        <RadioButton
+            android:id="@+id/rbFilter2"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textColor="@color/light_grey"
+            android:buttonTint="@drawable/radio_button"
+            android:drawablePadding="@dimen/icon_padding"
+            android:drawableEnd="@drawable/human_list_icon"
+            android:text="@string/myExercises"/>
+        <RadioButton
+            android:id="@+id/rbFilter3"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textColor="@color/light_grey"
+            android:buttonTint="@drawable/radio_button"
+            android:drawablePadding="@dimen/icon_padding"
+            android:drawableEnd="@drawable/exercise_program_orange_icon"
+            android:text="@string/allExercises"/>
+    </RadioGroup>
 
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_margin="@dimen/margin_default"
-                android:text="@string/hello_blank_fragment"
-                android:textAlignment="center" />
+    <com.google.android.material.button.MaterialButton
+        android:id="@+id/btFilter"
+        style="@style/Widget.MaterialComponents.Button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:paddingHorizontal="60dp"
+        android:layout_margin="@dimen/margin_default"
+        android:backgroundTint="@color/aqua_button"
+        android:text="@string/apply_button"
+        app:cornerRadius="@dimen/cornerRadiusButton"
+        app:layout_constraintTop_toBottomOf="@id/rgFilter"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
 
 
-            <CheckBox
-                android:id="@+id/cbEx1"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_margin="@dimen/margin_default"
-                android:text="@string/hello_blank_fragment"
-                android:paddingStart="50dp" />
-
-            <CheckBox
-                android:id="@+id/cbEx2"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_margin="@dimen/margin_default"
-                android:text="@string/hello_blank_fragment"
-                android:textAlignment="center" />
-
-            <CheckBox
-                android:id="@+id/cbEx3"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_margin="@dimen/margin_default"
-                android:text="@string/hello_blank_fragment"
-                android:textAlignment="center" />
-
-            <CheckBox
-                android:id="@+id/cbEx4"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_margin="@dimen/margin_default"
-                android:text="@string/hello_blank_fragment"
-                android:textAlignment="center" />
-
-            <CheckBox
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_margin="@dimen/margin_default"
-                android:nestedScrollingEnabled="false"
-                android:text="@string/hello_blank_fragment" />
-            <CheckBox
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_margin="@dimen/margin_default"
-                android:text="@string/hello_blank_fragment"
-                android:textAlignment="center" />
-
-            <CheckBox
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_margin="@dimen/margin_default"
-                android:text="@string/hello_blank_fragment"
-                android:textAlignment="center" />
-
-            <CheckBox
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_margin="@dimen/margin_default"
-                android:text="@string/hello_blank_fragment"
-                android:textAlignment="center" />
-
-            <CheckBox
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_margin="@dimen/margin_default"
-                android:text="@string/hello_blank_fragment"
-                android:textAlignment="center" />
-
-            <CheckBox
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_margin="@dimen/margin_default"
-                android:text="@string/hello_blank_fragment"
-                android:textAlignment="center" />
-
-            <CheckBox
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_margin="@dimen/margin_default"
-                android:text="@string/hello_blank_fragment"
-                android:textAlignment="center" />
-
-            <com.google.android.material.button.MaterialButton
-                android:id="@+id/btHello"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center_horizontal"
-                android:layout_margin="@dimen/margin_default"
-                style="@style/Widget.MaterialComponents.Button"
-                android:text="Click me" />
-        </LinearLayout>
-
-</ScrollView>
+</androidx.constraintlayout.widget.ConstraintLayout>
