--- a/app/src/main/res/layout/fragment_exercises.xml
+++ b/app/src/main/res/layout/fragment_exercises.xml
@@ -4,8 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/aqua"
-
+    android:background="@color/primary_background"
     tools:context=".ui.exercises.ExercisesFragment">
 
     <TextView
@@ -20,7 +19,6 @@
         android:textSize="@dimen/primary_title_default"
         app:layout_constraintBottom_toTopOf="@id/search_bar"
         app:layout_constraintEnd_toStartOf="@id/ibAdd"
-        app:layout_constraintHorizontal_bias="0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -75,7 +73,7 @@
         android:layout_marginTop="@dimen/vertical_margin_default"
         android:background="@color/white"
         android:text="@string/all"
-        android:textColor="@color/aqua"
+        android:textColor="@color/primary_background"
         app:layout_constraintBottom_toTopOf="@id/svExercises"
         app:layout_constraintEnd_toStartOf="@id/chMuscleGroups"
         app:layout_constraintHorizontal_chainStyle="spread_inside"
@@ -88,7 +86,7 @@
         android:layout_height="wrap_content"
         android:background="@color/white"
         android:text="@string/MuscleGroups"
-        android:textColor="@color/aqua"
+        android:textColor="@color/primary_background"
         app:layout_constraintBottom_toTopOf="@id/svExercises"
         app:layout_constraintEnd_toStartOf="@id/chEquipments"
         app:layout_constraintStart_toEndOf="@id/chAll"
@@ -100,7 +98,7 @@
         android:layout_height="wrap_content"
         android:background="@color/white"
         android:text="@string/Equipments"
-        android:textColor="@color/aqua"
+        android:textColor="@color/primary_background"
         app:layout_constraintBottom_toTopOf="@id/svExercises"
         app:layout_constraintEnd_toEndOf="@id/ibAdd"
         app:layout_constraintStart_toEndOf="@id/chMuscleGroups"
