--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -4,37 +4,18 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/aqua"
+    android:background="@color/primary_background"
     tools:context=".features.profile.ProfileFragment">
 
-
-    <com.google.android.material.button.MaterialButton
-        android:id="@+id/buttonGoogle"
-        android:layout_width="325dp"
-        android:layout_height="48dp"
-        android:layout_marginBottom="524dp"
-        android:backgroundTint="@color/white"
-        android:drawableLeft="@drawable/pesquisa"
-        android:text="Vincular sua conta Google"
-        android:textColor="@color/black"
-        app:cornerRadius="15dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-
-        />
-
     <androidx.cardview.widget.CardView
-        android:layout_width="370dp"
-        android:layout_height="350dp"
+        android:id="@+id/cvProfileConf"
+        android:layout_width="337dp"
+        android:layout_height="305dp"
         app:cardCornerRadius="15dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        tools:layout_editor_absoluteX="25dp"
-        tools:layout_editor_absoluteY="190dp">
-
+        app:layout_constraintTop_toTopOf="parent">
 
         <TextView
             android:layout_width="match_parent"
@@ -50,8 +31,7 @@
             android:layout_height="111dp"
             android:layout_marginLeft="15dp"
             android:layout_marginTop="40dp"
-            android:background="@drawable/perfil"
-            />
+            android:background="@drawable/perfil" />
 
         <TextView
             android:id="@+id/tvProfileNome"
@@ -80,7 +60,7 @@
             android:layout_marginLeft="160dp"
             android:layout_marginTop="100dp"
             android:text="20 Anos"
-            android:textSize="10dp" />
+            android:textSize="12dp" />
 
         <TextView
             android:id="@+id/textCidade"
@@ -89,7 +69,7 @@
             android:layout_marginLeft="250dp"
             android:layout_marginTop="100dp"
             android:text="São Paulo/SP"
-            android:textSize="10dp" />
+            android:textSize="12dp" />
 
         <TextView
             android:id="@+id/textEEmail"
@@ -98,7 +78,7 @@
             android:layout_marginLeft="25dp"
             android:layout_marginTop="195dp"
             android:text="EMAIL"
-            android:textSize="10dp" />
+            android:textSize="12dp" />
 
         <EditText
             android:id="@+id/etProfileEmail"
@@ -108,7 +88,7 @@
             android:layout_marginTop="200dp"
             android:inputType="textWebEmailAddress"
             android:text="fernando.alburquerque@mail.com"
-            android:textSize="10dp" />
+            android:textSize="12dp" />
 
         <TextView
             android:id="@+id/tvDataNasc"
@@ -117,7 +97,7 @@
             android:layout_marginLeft="25dp"
             android:layout_marginTop="230dp"
             android:text="Data de Nascimento"
-            android:textSize="10dp" />
+            android:textSize="12dp" />
 
         <EditText
             android:id="@+id/editTextDataNasc"
@@ -127,7 +107,7 @@
             android:layout_marginTop="235dp"
             android:inputType="textWebEmailAddress"
             android:text="01 de jan de 2001"
-            android:textSize="10dp" />
+            android:textSize="12dp" />
 
         <TextView
             android:id="@+id/textEGenero"
@@ -136,7 +116,7 @@
             android:layout_marginLeft="25dp"
             android:layout_marginTop="265dp"
             android:text="Gênero"
-            android:textSize="10dp" />
+            android:textSize="12dp" />
 
         <EditText
             android:id="@+id/editTextGenero"
@@ -148,84 +128,87 @@
             android:text="Masculino"
             android:textSize="10dp" />
 
-
     </androidx.cardview.widget.CardView>
-
 
     <com.google.android.material.button.MaterialButton
         android:id="@+id/buttonTermos"
-        android:layout_width="370dp"
-        android:layout_height="48dp"
-        android:layout_marginBottom="64dp"
+        android:layout_width="341dp"
+        android:layout_height="46dp"
+        android:layout_marginBottom="96dp"
         android:backgroundTint="@color/white"
         android:text="Termos de Uso e Política de Privacidade"
-        android:textSize="12dp"
         android:textColor="@color/black"
+        android:textSize="12dp"
         app:cornerRadius="15dp"
         app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.487"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         app:rippleColor="#FBFBFB" />
+
 
     <com.google.android.material.button.MaterialButton
         android:id="@+id/buttonSair"
-        android:layout_width="370dp"
-        android:layout_height="48dp"
-        android:layout_marginBottom="4dp"
+        android:layout_width="337dp"
+        android:layout_height="46dp"
+        android:layout_marginBottom="32dp"
         android:backgroundTint="@color/white"
         android:drawableLeft="@drawable/sair"
         android:text="Sair"
-        android:textSize="12dp"
+        android:textAlignment="viewEnd"
         android:textColor="@color/red"
-        android:textAlignment="viewStart"
+        android:textSize="12dp"
         app:cornerRadius="15dp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintHorizontal_bias="0.487"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.494"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:rippleColor="#FBFBFB" />
->>>>>>> 0c979a08c8090c157acce83f6fdfd56e8c5b1388
+        app:layout_constraintStart_toStartOf="parent">
 
-    <TextView
-        android:id="@+id/text_profile"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="8dp"
-        android:textAlignment="center"
-        android:textSize="20sp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+    </com.google.android.material.button.MaterialButton>
 
     <TextView
         android:id="@+id/textPageProfile"
         android:layout_width="128dp"
         android:layout_height="38dp"
-        android:text="PERFIL"
+        android:layout_marginTop="16dp"
+        android:text="Perfil"
         android:textColor="@color/white"
-        android:textSize="20dp"
+        android:textSize="30dp"
         android:textStyle="bold"
-        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.074"
+        app:layout_constraintHorizontal_bias="0.13"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.023" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <ImageButton
         android:id="@+id/ibProfileConf"
         android:layout_width="30dp"
         android:layout_height="30dp"
+        android:layout_marginTop="24dp"
+        android:layout_marginEnd="36dp"
         android:background="@drawable/conf"
-        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.947"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.022" />
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <com.google.android.material.button.MaterialButton
+        android:id="@+id/buttonGoogle"
+        android:layout_width="324dp"
+        android:layout_height="43dp"
+        android:layout_margin="20dp"
+        android:layout_marginBottom="40dp"
+        android:backgroundTint="@color/white"
+        android:drawableLeft="@drawable/pesquisa"
+        android:text="Vincular sua conta Google"
+        android:textColor="@color/black"
+        app:cornerRadius="15dp"
+        app:layout_constraintBottom_toTopOf="@id/cvProfileConf"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent">
+
+    </com.google.android.material.button.MaterialButton>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
