--- a/app/src/main/res/layout/criar_exercicio_fragment.xml
+++ b/app/src/main/res/layout/criar_exercicio_fragment.xml
@@ -9,6 +9,7 @@
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:backgroundTint="@color/primary_background"
         android:text="X"
         android:textColor="@color/white"
         android:textSize="20sp">
@@ -21,7 +22,7 @@
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginStart="109dp"
+        android:layout_marginStart="15dp"
         android:layout_marginTop="93dp"
         android:text="Adicionar Exercício"
         android:textAppearance="?attr/textAppearanceHeadline6"
