--- a/app/src/main/res/layout/fragment_init.xml
+++ b/app/src/main/res/layout/fragment_init.xml
@@ -11,13 +11,72 @@
         android:id="@+id/text_init"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="8dp"
-        android:textAlignment="center"
-        android:textSize="20sp"
+        android:layout_margin="20dp"
+        android:text="@string/init"
+        android:textColor="@color/white"
+        android:textSize="30sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent"/>
+
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/cvCalendarNutrition"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"/>
+
+    <CalendarView
+        android:layout_width="352dp"
+        android:layout_height="119dp"
+        android:layout_margin="40dp"
+        android:background="@color/white"
+        app:layout_constraintBottom_toTopOf="@id/cvCalendarNutrition"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/text_init" />
+
+    <TextView
+        android:id="@+id/txNextTrainig"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="20dp"
+        android:text="@string/next_training"
+        android:textColor="@color/white"
+        android:textSize="20sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="parent"
+        app:layout_constraintBottom_toTopOf="@id/cvCalendarNutrition"
+        app:layout_constraintTop_toBottomOf="@id/cvNextTraining">
+
+    </TextView>
+
+    <androidx.cardview.widget.CardView
+        android:id="@+id/cvCalendarNutrition"
+        android:layout_width="350dp"
+        android:layout_height="80dp"
+        app:cardCornerRadius="15sp"
+        android:layout_margin="40dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintBottom_toTopOf="@id/cvNextTraining"
+        app:layout_constraintTop_toBottomOf="@id/cvCalendarNutrition">
+    </androidx.cardview.widget.CardView>
+
+    <androidx.cardview.widget.CardView
+        android:id="@+id/cvNextTraining"
+        android:layout_width="350dp"
+        android:layout_height="80dp"
+        android:layout_margin="20dp"
+        app:cardCornerRadius="15sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/cvCalendarNutrition">
+<!--        app:layout_constraintBottom_toTopOf="@+id/cvNextMeal"-->
+
+
+    </androidx.cardview.widget.CardView>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
