--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -15,6 +15,8 @@
     <dimen name="horizontal_margin_extra">32dp</dimen>
     <dimen name="title_card">18sp</dimen>
     <dimen name="icon_padding">16dp</dimen>
-    <dimen name="cornerRadiusButton">20dp</dimen>
+    <dimen name="cornerRadius">20dp</dimen>
     <dimen name="checkBox_text_size">18sp</dimen>
+    <dimen name="max_width_image">360dp</dimen>
+    <dimen name="max_height_image">240dp</dimen>
 </resources>
