--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -19,4 +19,5 @@
     <dimen name="checkBox_text_size">18sp</dimen>
     <dimen name="max_width_image">360dp</dimen>
     <dimen name="max_height_image">240dp</dimen>
+    <dimen name="text_size_default">12sp</dimen>
 </resources>
