--- a/app/src/main/res/layout/fragment_exercises.xml
+++ b/app/src/main/res/layout/fragment_exercises.xml
@@ -73,7 +73,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/vertical_margin_default"
-        android:background="@color/white"
+        android:backgroundTint="@color/white"
         android:text="@string/all"
         android:textColor="@color/primary_background"
         app:layout_constraintBottom_toTopOf="@id/vgExerciseRecyclerView"
@@ -86,7 +86,7 @@
         android:id="@+id/chMuscleGroups"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:background="@color/white"
+        android:backgroundTint="@color/white"
         android:text="@string/MuscleGroups"
         android:textColor="@color/primary_background"
         app:layout_constraintBottom_toTopOf="@id/vgExerciseRecyclerView"
@@ -98,7 +98,7 @@
         android:id="@+id/chEquipments"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:background="@color/white"
+        android:backgroundTint="@color/white"
         android:text="@string/Equipments"
         android:textColor="@color/primary_background"
         app:layout_constraintBottom_toTopOf="@id/vgExerciseRecyclerView"
