--- a/app/src/main/res/layout/fragment_exercise_detail.xml
+++ b/app/src/main/res/layout/fragment_exercise_detail.xml
@@ -5,17 +5,18 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/primary_background"
+    android:fillViewport="true"
     tools:context=".features.exercisedetail.view.ExerciseDetailFragment">
 
 
     <ImageButton
-        android:id="@+id/ivBack"
+        android:id="@+id/ibBackIcon"
         android:layout_width="@dimen/icon_size"
         android:layout_height="@dimen/icon_size"
         android:layout_marginStart="@dimen/horizontal_margin_default"
         android:layout_marginTop="@dimen/vertical_margin_default"
         android:adjustViewBounds="true"
-        android:background="?attr/selectableItemBackground"
+        android:background="?attr/selectableItemBackgroundBorderless"
         android:src="@drawable/ic_baseline_arrow_back"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -36,93 +37,108 @@
         android:id="@+id/tvExerciseName"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:text="@string/exercise_name"
         android:textAlignment="center"
         android:textColor="@color/white"
         android:textSize="@dimen/primary_title_default"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/ivExerciseImage"
-        android:text="@string/exercise_name" />
+        app:layout_constraintTop_toBottomOf="@+id/ivExerciseImage" />
 
-
-    <TextView
-        android:id="@+id/tvDescription"
+    <ScrollView
         android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginHorizontal="@dimen/horizontal_margin_default"
-        android:layout_marginTop="@dimen/vertical_margin_between_contents"
-        android:text="@string/description"
-        android:textColor="@color/white"
-        android:textSize="@dimen/secondary_title_default"
-        app:layout_constraintBottom_toTopOf="@id/tvDescriptionValue"
+        android:layout_height="0dp"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/tvExerciseName" />
+        app:layout_constraintTop_toBottomOf="@id/tvExerciseName">
 
-    <TextView
-        android:id="@+id/tvDescriptionValue"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/vertical_margin_default"
-        android:textColor="@color/white"
-        android:textSize="@dimen/text_size_default"
-        app:layout_constraintBottom_toTopOf="@id/tvPrimaryMuscle"
-        app:layout_constraintEnd_toEndOf="@id/tvDescription"
-        app:layout_constraintStart_toStartOf="@id/tvDescription"
-        app:layout_constraintTop_toBottomOf="@id/tvDescription"
-        android:text="@string/description_value" />
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
 
-    <TextView
-        android:id="@+id/tvPrimaryMuscle"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/vertical_margin_between_contents"
-        android:text="@string/primary_muscle"
-        android:textColor="@color/white"
-        android:textSize="@dimen/secondary_title_default"
-        app:layout_constraintBottom_toTopOf="@id/tvPrimaryMuscleValue"
-        app:layout_constraintEnd_toEndOf="@id/tvDescription"
-        app:layout_constraintStart_toStartOf="@id/tvDescription"
-        app:layout_constraintTop_toBottomOf="@id/tvDescriptionValue" />
+            <TextView
+                android:id="@+id/tvDescription"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginHorizontal="@dimen/horizontal_margin_default"
+                android:layout_marginTop="@dimen/vertical_margin_between_contents"
+                android:text="@string/description"
+                android:textColor="@color/white"
+                android:textSize="@dimen/secondary_title_default"
+                app:layout_constraintBottom_toTopOf="@id/tvDescriptionValue"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
 
-    <TextView
-        android:id="@+id/tvPrimaryMuscleValue"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/vertical_margin_default"
-        android:textColor="@color/white"
-        android:textSize="@dimen/text_size_default"
-        app:layout_constraintBottom_toTopOf="@id/tvSecondaryMuscle"
-        app:layout_constraintEnd_toEndOf="@id/tvDescription"
-        app:layout_constraintStart_toStartOf="@id/tvDescription"
-        app:layout_constraintTop_toBottomOf="@id/tvPrimaryMuscle"
-        tools:text="@string/muscle_list" />
+            <TextView
+                android:id="@+id/tvDescriptionValue"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/vertical_margin_default"
+                android:text="@string/description_value"
+                android:textColor="@color/white"
+                android:textSize="@dimen/text_size_default"
+                app:layout_constraintBottom_toTopOf="@id/tvPrimaryMuscle"
+                app:layout_constraintEnd_toEndOf="@id/tvDescription"
+                app:layout_constraintStart_toStartOf="@id/tvDescription"
+                app:layout_constraintTop_toBottomOf="@id/tvDescription" />
 
-    <TextView
-        android:id="@+id/tvSecondaryMuscle"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/vertical_margin_between_contents"
-        android:text="@string/secondary_muscle"
-        android:textColor="@color/white"
-        android:textSize="@dimen/secondary_title_default"
-        app:layout_constraintBottom_toTopOf="@+id/tvSecondaryMuscleValue"
-        app:layout_constraintEnd_toEndOf="@id/tvDescription"
-        app:layout_constraintStart_toStartOf="@id/tvDescription"
-        app:layout_constraintTop_toBottomOf="@id/tvPrimaryMuscleValue" />
+            <TextView
+                android:id="@+id/tvPrimaryMuscle"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/vertical_margin_between_contents"
+                android:text="@string/primary_muscle"
+                android:textColor="@color/white"
+                android:textSize="@dimen/secondary_title_default"
+                app:layout_constraintBottom_toTopOf="@id/tvPrimaryMuscleValue"
+                app:layout_constraintEnd_toEndOf="@id/tvDescription"
+                app:layout_constraintStart_toStartOf="@id/tvDescription"
+                app:layout_constraintTop_toBottomOf="@id/tvDescriptionValue" />
 
-    <TextView
-        android:id="@+id/tvSecondaryMuscleValue"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/vertical_margin_default"
-        android:textColor="@color/white"
-        android:textSize="@dimen/text_size_default"
-        app:layout_constraintEnd_toEndOf="@id/tvDescription"
-        app:layout_constraintStart_toStartOf="@id/tvDescription"
-        app:layout_constraintTop_toBottomOf="@id/tvSecondaryMuscle"
-        tools:text="@string/muscle_list" />
+            <TextView
+                android:id="@+id/tvPrimaryMuscleValue"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/vertical_margin_default"
+                android:textColor="@color/white"
+                android:textSize="@dimen/text_size_default"
+                app:layout_constraintBottom_toTopOf="@id/tvSecondaryMuscle"
+                app:layout_constraintEnd_toEndOf="@id/tvDescription"
+                app:layout_constraintStart_toStartOf="@id/tvDescription"
+                app:layout_constraintTop_toBottomOf="@id/tvPrimaryMuscle"
+                tools:text="@string/muscle_list" />
 
+            <TextView
+                android:id="@+id/tvSecondaryMuscle"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/vertical_margin_between_contents"
+                android:text="@string/secondary_muscle"
+                android:textColor="@color/white"
+                android:textSize="@dimen/secondary_title_default"
+                app:layout_constraintBottom_toTopOf="@+id/tvSecondaryMuscleValue"
+                app:layout_constraintEnd_toEndOf="@id/tvDescription"
+                app:layout_constraintStart_toStartOf="@id/tvDescription"
+                app:layout_constraintTop_toBottomOf="@id/tvPrimaryMuscleValue" />
+
+            <TextView
+                android:id="@+id/tvSecondaryMuscleValue"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/vertical_margin_default"
+                android:layout_marginBottom="@dimen/vertical_margin_between_contents"
+                android:textColor="@color/white"
+                android:textSize="@dimen/text_size_default"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="@id/tvDescription"
+                app:layout_constraintStart_toStartOf="@id/tvDescription"
+                app:layout_constraintTop_toBottomOf="@id/tvSecondaryMuscle"
+                tools:text="@string/muscle_list" />
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
+    </ScrollView>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
 
