--- a/app/src/main/res/layout/fragment_exercises.xml
+++ b/app/src/main/res/layout/fragment_exercises.xml
@@ -76,7 +76,7 @@
         android:backgroundTint="@color/white"
         android:text="@string/all"
         android:textColor="@color/primary_background"
-        app:layout_constraintBottom_toTopOf="@id/vgExerciseRecyclerView"
+
         app:layout_constraintEnd_toStartOf="@id/chMuscleGroups"
         app:layout_constraintHorizontal_chainStyle="spread_inside"
         app:layout_constraintStart_toStartOf="@id/tvExercises"
@@ -89,7 +89,7 @@
         android:backgroundTint="@color/white"
         android:text="@string/MuscleGroups"
         android:textColor="@color/primary_background"
-        app:layout_constraintBottom_toTopOf="@id/vgExerciseRecyclerView"
+
         app:layout_constraintEnd_toStartOf="@id/chEquipments"
         app:layout_constraintStart_toEndOf="@id/chAll"
         app:layout_constraintTop_toTopOf="@id/chAll" />
@@ -101,7 +101,7 @@
         android:backgroundTint="@color/white"
         android:text="@string/Equipments"
         android:textColor="@color/primary_background"
-        app:layout_constraintBottom_toTopOf="@id/vgExerciseRecyclerView"
+
         app:layout_constraintEnd_toEndOf="@id/ibAdd"
         app:layout_constraintStart_toEndOf="@id/chMuscleGroups"
         app:layout_constraintTop_toTopOf="@id/chAll" />
@@ -111,6 +111,16 @@
         android:id="@+id/vgExerciseRecyclerView"
         android:layout_width="0dp"
         android:layout_height="0dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/chAll" />
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/vgSearchExerciseRecyclerView"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:visibility="invisible"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
