--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -8,9 +8,13 @@
 
     <fragment
         android:id="@+id/navigation_workout"
-        android:name="com.example.digitalfit.features.workout.WorkoutFragment"
+        android:name="com.example.digitalfit.features.workout.view.WorkoutFragment"
         android:label="@string/workout"
-        tools:layout="@layout/fragment_workout" />
+        tools:layout="@layout/fragment_workout" >
+        <action
+            android:id="@+id/action_navigation_workout_to_workoutCreateDialog"
+            app:destination="@id/workoutCreateDialog" />
+    </fragment>
 
     <fragment
         android:id="@+id/navigation_exercises"
@@ -85,4 +89,8 @@
         android:name="com.example.digitalfit.features.login.SplashActivity"
         android:label="activity_splash"
         tools:layout="@layout/activity_splash" />
+    <dialog
+        android:id="@+id/workoutCreateDialog"
+        android:name="com.example.digitalfit.features.workout.view.WorkoutCreateDialog"
+        android:label="WorkoutCreateDialog" />
 </navigation>
